# recurrentlens

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
notebooks/: 01_quickstart.ipynb  02_explore_pretrained.ipynb  03_train_mamba130m_sae.ipynb
scripts/: check_no_secrets.sh  train_mamba130m_smoke.py
src/recurrentlens/: __init__.py
src/recurrentlens/bench/: __init__.py  evaluate.py
src/recurrentlens/core/: __init__.py  model.py  protocols.py  types.py
src/recurrentlens/features/: __init__.py  ablate.py  steer.py
src/recurrentlens/hooks/: __init__.py  registry.py
src/recurrentlens/hub/: __init__.py  io.py
src/recurrentlens/sae/: __init__.py  base.py  cache.py  datastream.py  train.py  variants.py
src/recurrentlens/viz/: __init__.py  feature_explorer.py
tests/: test_features.py  test_hooks_unit.py  test_hub_io.py  test_model_unit.py  test_sae_unit.py  test_smoke.py  test_train_smoke.py  test_viz_bench.py
