[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recurrentlens"
version = "0.1.0.post1"
description = "Mechanistic interpretability for State-Space Models: SAEs, feature visualization, and a Hub registry for Mamba/Mamba-2."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "hinanohart"}]
keywords = [
    "mechanistic-interpretability",
    "sparse-autoencoder",
    "ssm",
    "mamba",
    "state-space-model",
    "interpretability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "huggingface-hub>=0.26",
    "safetensors>=0.4",
    "datasets>=2.20",
    "zarr>=2.18,<3.0",
    "einops>=0.7",
    "pydantic>=2.7",
    "numpy>=1.26",
    "jinja2>=3.1",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mamba = ["mamba-ssm>=2.2.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pyright>=1.1",
    "ipykernel>=6.29",
]

[project.urls]
Homepage = "https://github.com/hinanohart/recurrentlens"
Issues = "https://github.com/hinanohart/recurrentlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/recurrentlens"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
